🛡️ Sentinel: [CRITICAL] Fix command injection and credential exposure in AuditLogManager
Refactored `Runtime.getRuntime().exec(String[])` to `ProcessBuilder(List<String>)` in `AuditLogManager.java` to prevent argument command injection. Passed the database password safely through the `MYSQL_PWD` environment variable instead of a `--password` command-line argument, preventing credential exposure in process logs (`ps`).

Co-authored-by: yingbull <8680161+yingbull@users.noreply.github.com>