@@ -35,8 +35,10 @@ import java.text.SimpleDateFormat;
 import java.time.LocalDate;
 import java.time.ZoneId;
 import java.time.temporal.ChronoUnit;
+import java.util.ArrayList;
 import java.util.Calendar;
 import java.util.Date;
+import java.util.List;
 
 import org.apache.logging.log4j.Logger;
 import io.github.carlos_emr.carlos.commn.dao.OscarLogDao;
@@ -103,16 +105,24 @@ public class AuditLogManager {
 
         String filename = outputDirectory + "/OSCAR_AUDIR_LOG_PURGE_FILE_" + formatter3.format(endDateToPurge) + ".sql";
 
-        String vars[] = new String[9];
-        vars[0] = mysqldump;
-        vars[1] = "--user=" + user;
-        vars[2] = "--password=" + password;
-        vars[3] = "-w";
-        vars[4] = "dateTime < '" + formatter2.format(endDateToPurge) + "'";
-        vars[5] = "-t";
-        vars[6] = "--result-file=" + filename;
-        vars[7] = dbName;
-        vars[8] = "log";
+        List<String> vars = new ArrayList<>();
+        vars.add(mysqldump);
+        vars.add("--user");
+        vars.add(user);
+        vars.add("-w");
+
+        StringBuilder whereClause = new StringBuilder();
+        whereClause.append("dateTime < '").append(formatter2.format(endDateToPurge)).append("'");
+        vars.add(whereClause.toString());
+
+        vars.add("-t");
+
+        StringBuilder resultFile = new StringBuilder();
+        resultFile.append("--result-file=").append(filename);
+        vars.add(resultFile.toString());
+
+        vars.add(dbName);
+        vars.add("log");
 
         Integer exitValue = null;
 
@@ -120,7 +130,11 @@ public class AuditLogManager {
         try {
             String s = null;
 
-            Process p = Runtime.getRuntime().exec(vars);
+            ProcessBuilder pb = new ProcessBuilder(vars);
+            if (password != null) {
+                pb.environment().put("MYSQL_PWD", password);
+            }
+            Process p = pb.start();
 
             BufferedReader stdInput = new BufferedReader(new InputStreamReader(p.getInputStream()));
 
